# packaging_examples

./: .gitignore  pyproject.toml  setup.cfg  setup.py  tox.ini
src/cheese/: cheeseboard.py
tests/unit/: test_cheeseboard.py
