; Documentation for file format: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = cheese
version = 0.1
description = Demo project showing current python packaging best practices
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src